added header, skills and project titles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Adrian Graham Portfolio</title>
   </head>
   <body>
-    <p>Hello World</p>
+    <header class="headline"><h1>Adrian Graham</h1></header>
+    <section class="Me">
+      <h3>About Me</h3>
+      <p>
+        NEEEDDD TO FILL THIS OUT WITH BRIEF BOI WITH PHOTO CONTACT INFO LINKS TO
+        GITHUB AND LINKEDLN, SKILLS AND ANYTHING ELSE PERTINENT
+        BLAHHHHHHHHHHHHHHHHHHHHHHH
+      </p>
+    </section>
+    <aside class="sidebar">
+      <h3>Contacts</h3>
+      <ul>
+        <li>Email:</li>
+        <li>Github:</li>
+        <li>Linkedln:</li>
+      </ul>
+    </aside>
+    <div class="box-1">
+      <h3>Skillsets</h3>
+      <ul>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+      </ul>
+    </div>
+    <article class="Article article-1">
+      <h3>Virtual Pet</h3>
+    </article>
+    <article class="Article article-2">
+      <h3>Virtual Pet Shelter</h3>
+    </article>
+    <article class="Article article-3">
+      <h3>Pets Amok</h3>
+    </article>
+    <article class="Article article-4">
+      <h3>Pet API</h3>
+    </article>
+    <footer class="zone yellow" id="toes">Footer</footer>
   </body>
 </html>
