added descriptions for projects

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
       <article class="Article article-1">
         <h3>Virtual Pet</h3>
         <!-- screenshot and link to google -->
-        <p>Description of project. LOOOOKKKK ATTTTTT!!!!!!!</p>
+        <p>
+          Java based program where you have a digital pet that must be taken
+          care of. You are tasked with maintain your pets level of
+          Hunger,Thirst, and boredom. Each option taken ( except for getting pet
+          stats and ending the program) will have positive and negative affects
+          on your pets different levels.
+        </p>
         <a href="https://www.google.com">Google</a>
 
         <div class="square-1">
@@ -70,7 +76,14 @@
       <article class="Article article-2">
         <h3>Virtual Pet Shelter</h3>
         <!-- screenshot and link to google -->
-        <p>Description of project. LOOOOKKKK ATTTTTT!!!!!!!</p>
+        <p>
+          Virtual pet has been upgraded to include a shelter so that you can
+          house and handle more than one pet at a time. You are tasked with
+          maintain levels of Hunger,Thirst, and boredom for all pets in the
+          shelter. There are now options to have your pets adopted (removed from
+          the shelter), add new pets, and to play with a specific pet of your
+          choice.
+        </p>
         <a href="https://www.google.com">Google</a>
         <div class="square-2">
           <p>Skills used: Java</p>
@@ -79,19 +92,19 @@
       <article class="Article article-3">
         <h3>Pets Amok</h3>
         <!-- screenshot and link to google -->
-        <p>Description of project. LOOOOKKKK ATTTTTT!!!!!!!</p>
+        <p>
+          The next big phase of Virtual Pet Shelter. Pets Amok!! There are now
+          more specific types of pets like Organic and Robo. Cats have been
+          thrown into the mix as well. Not only do you have to pay attention to
+          Hunger,Thirst and Boredom levels for each pet, now there new
+          attributes added for each different type of pet. BE-CAREFUL, to not
+          let your levels go to low otherwise your pet will lose happiness and
+          even health. Can you keep up? Do you have what it takes to manage so
+          many different pets?
+        </p>
         <a href="https://www.google.com">Google</a>
         <div class="square-3">
           <p>Skills used: Java</p>
-        </div>
-      </article>
-      <article class="Article article-4">
-        <h3>Pet API</h3>
-        <!-- screenshot and link to google -->
-        <p>Description of project. LOOOOKKKK ATTTTTT!!!!!!!</p>
-        <a href="https://www.google.com">Google</a>
-        <div class="square-4">
-          <p>Skills used: Java, Spring, Spring Boot</p>
         </div>
       </article>
       <footer class="trademark" id="toes">
