added shading and shadow to nav buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <nav class="Zone blue">
       <ul class="main-nav">
         <li>
-          <a href="#About me">About Me</a><a href="#Skill sets">Skill sets</a
-          ><a href="#My Projects">My Projects</a>
+          <a href="#About me" class="button green light">About Me</a
+          ><a href="#Skill sets" class="button purple light">Skill sets</a
+          ><a href="#My Projects" class="button red light">My Projects</a>
         </li>
       </ul>
     </nav>
@@ -19,6 +20,9 @@
       <header class="headline"><h1>Adrian Graham</h1></header>
       <section class="Me" id="About Me">
         <h3>About Me</h3>
+        <div class="box zone">
+          <img src="./img/Me.jpg" width="200" height="250" />
+        </div>
         <p>
           NEEEDDD TO FILL THIS OUT WITH BRIEF BOI WITH PHOTO CONTACT INFO LINKS
           TO GITHUB AND LINKEDLN, SKILLS AND ANYTHING ELSE PERTINENT
@@ -28,17 +32,19 @@
       <aside class="sidebar">
         <h2>Contacts</h2>
         <ul>
-          <li>Email:</li>
+          <li><a href="mailto:gaps512@gmail.com">Email</a></li>
           <li>
             <a
               href="https://github.com/ProgramWithGraham/ProgramWithGraham.github.io"
               >Github</a
             >
           </li>
-          <a
-            href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
-            >Linkedln</a
-          >
+          <li>
+            <a
+              href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+              >Linkedln</a
+            >
+          </li>
         </ul>
       </aside>
       <section class="box-1" id="Skill sets">
@@ -57,26 +63,27 @@
         </ul>
       </section>
       <section class="project" id="My Projects"><h2>My Projects</h2></section>
-      <article class="Article article-1">
+      <article class="Article article-1 grey">
         <h3>Virtual Pet</h3>
-        <!-- screenshot and link to google -->
-        <p>
+        <div class="box grid-wrapper grey"></div>
+        <div class="box grey"><img src="./img/VirtualPet.png" /></div>
+        <p class="grey">
           Java based program where you have a digital pet that must be taken
           care of. You are tasked with maintain your pets level of
           Hunger,Thirst, and boredom. Each option taken ( except for getting pet
           stats and ending the program) will have positive and negative affects
           on your pets different levels.
         </p>
-        <a href="https://www.google.com">Google</a>
-
+        <a class="grey" href="https://www.google.com">Google</a>
         <div class="square-1">
-          <p>Skills used: Java</p>
+          <p class="grey">Skills used: Java</p>
         </div>
       </article>
-      <article class="Article article-2">
+      <article class="Article article-2 grey">
         <h3>Virtual Pet Shelter</h3>
-        <!-- screenshot and link to google -->
-        <p>
+        <div class="box grey grid-wrapper"></div>
+        <div class="box grey"><img src="./img/PetShelter.png" /></div>
+        <p class="grey">
           Virtual pet has been upgraded to include a shelter so that you can
           house and handle more than one pet at a time. You are tasked with
           maintain levels of Hunger,Thirst, and boredom for all pets in the
@@ -84,15 +91,16 @@
           the shelter), add new pets, and to play with a specific pet of your
           choice.
         </p>
-        <a href="https://www.google.com">Google</a>
-        <div class="square-2">
-          <p>Skills used: Java</p>
+        <a class="grey" href="https://www.google.com">Google</a>
+        <div class="square-2 grey">
+          <p class="grey">Skills used: Java</p>
         </div>
       </article>
-      <article class="Article article-3">
+      <article class="Article article-3 grey">
         <h3>Pets Amok</h3>
-        <!-- screenshot and link to google -->
-        <p>
+        <div class="box grey grid-wrapper"></div>
+        <div class="box grey"><img src="./img/PetsAmok.png" /></div>
+        <p class="grey">
           The next big phase of Virtual Pet Shelter. Pets Amok!! There are now
           more specific types of pets like Organic and Robo. Cats have been
           thrown into the mix as well. Not only do you have to pay attention to
@@ -102,9 +110,9 @@
           even health. Can you keep up? Do you have what it takes to manage so
           many different pets?
         </p>
-        <a href="https://www.google.com">Google</a>
-        <div class="square-3">
-          <p>Skills used: Java</p>
+        <a class="grey" href="https://www.google.com">Google</a>
+        <div class="square-3 grey">
+          <p class="grey">Skills used: Java</p>
         </div>
       </article>
       <footer class="trademark" id="toes">
