--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Adrian Graham Portfolio</title>
   </head>
   <body>
-    <nav class="Zone blue">
-      <ul class="main-nav">
-        <li>
-          <a href="#About me" class="button green light">About Me</a
-          ><a href="#Skill sets" class="button purple light">Skill sets</a
-          ><a href="#My Projects" class="button red light">My Projects</a>
-        </li>
-      </ul>
-    </nav>
     <div class="container">
-      <header class="headline"><h1>Adrian Graham</h1></header>
-      <section class="Me" id="About Me">
-        <h3>About Me</h3>
-        <div class="box zone">
-          <img src="./img/Me.jpg" width="200" height="250" />
+      <nav class="Zone">
+        <ul class="main-nav">
+          <li>
+            <a href="#About me" class="button green light">About Me</a
+            ><a href="#Skill sets" class="button purple light">Skill sets</a
+            ><a href="#My Projects" class="button red light">My Projects</a>
+          </li>
+        </ul>
+      </nav>
+      <header class="headline box"><h1>Adrian Graham</h1></header>
+      <section class="box" id="About Me">
+        <h2>About Me</h2>
+        <div class="zone">
+          <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
         <p>
           NEEEDDD TO FILL THIS OUT WITH BRIEF BOI WITH PHOTO CONTACT INFO LINKS
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </aside>
-      <section class="box-1" id="Skill sets">
+      <section class="box-1 blue" id="Skill sets">
         <h2>Skill sets</h2>
         <ul>
           <li>Java</li>
@@ -63,10 +63,9 @@
         </ul>
       </section>
       <section class="project" id="My Projects"><h2>My Projects</h2></section>
-      <article class="Article article-1 grey">
+      <article class="grey">
         <h3>Virtual Pet</h3>
-        <div class="box grid-wrapper grey"></div>
-        <div class="box grey"><img src="./img/VirtualPet.png" /></div>
+        <div class="box grey zone"><img src="./img/VirtualPet.png" /></div>
         <p class="grey">
           Java based program where you have a digital pet that must be taken
           care of. You are tasked with maintain your pets level of
@@ -76,13 +75,13 @@
         </p>
         <a class="grey" href="https://www.google.com">Google</a>
         <div class="square-1">
-          <p class="grey">Skills used: Java</p>
+          <p class="red">Skills used: Java</p>
         </div>
       </article>
       <article class="Article article-2 grey">
         <h3>Virtual Pet Shelter</h3>
         <div class="box grey grid-wrapper"></div>
-        <div class="box grey"><img src="./img/PetShelter.png" /></div>
+        <div class="box grey zone"><img src="./img/PetShelter.png" /></div>
         <p class="grey">
           Virtual pet has been upgraded to include a shelter so that you can
           house and handle more than one pet at a time. You are tasked with
@@ -93,13 +92,12 @@
         </p>
         <a class="grey" href="https://www.google.com">Google</a>
         <div class="square-2 grey">
-          <p class="grey">Skills used: Java</p>
+          <p class="red">Skills used: Java</p>
         </div>
       </article>
-      <article class="Article article-3 grey">
+      <article class="Article article-3">
         <h3>Pets Amok</h3>
-        <div class="box grey grid-wrapper"></div>
-        <div class="box grey"><img src="./img/PetsAmok.png" /></div>
+        <div class="box grey zone"><img src="./img/PetsAmok.png" /></div>
         <p class="grey">
           The next big phase of Virtual Pet Shelter. Pets Amok!! There are now
           more specific types of pets like Organic and Robo. Cats have been
@@ -112,7 +110,7 @@
         </p>
         <a class="grey" href="https://www.google.com">Google</a>
         <div class="square-3 grey">
-          <p class="grey">Skills used: Java</p>
+          <p class="red">Skills used: Java</p>
         </div>
       </article>
       <footer class="trademark" id="toes">
