working on alignment

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="box" id="About Me">
         <h2>About Me</h2>
         <div class="zone">
-          <img class="box zone" src="./img/Me.jpg" width="200" height="250" />
+          <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
         <p>
           NEEEDDD TO FILL THIS OUT WITH BRIEF BOI WITH PHOTO CONTACT INFO LINKS
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </aside>
-      <section class="box-1 blue" id="Skill sets">
+      <section class="skill blue" id="Skill sets">
         <h2>Skill sets</h2>
         <ul>
           <li>Java</li>
@@ -63,54 +63,47 @@
         </ul>
       </section>
       <section class="project" id="My Projects"><h2>My Projects</h2></section>
-      <article class="Article article-1">
-        <h3>Virtual Pet</h3>
-        <div class="box"><img src="./img/VirtualPet.png" /></div>
-        <p class="box grey zone">
-          Java based program where you have a digital pet that must be taken
-          care of. You are tasked with maintain your pets level of
-          Hunger,Thirst, and boredom. Each option taken ( except for getting pet
-          stats and ending the program) will have positive and negative affects
-          on your pets different levels.
-        </p>
-        <a class="box grey zone" href="https://www.google.com">Google</a>
-        <div class="square">
-          <p class="red">Skills used: Java</p>
+      <article class="Article">
+        <h2>Virtual Pet</h2>
+        <div class="box zone grey">
+          <img src="./img/VirtualPet.png" /> Java based program where you have a
+          digital pet that must be taken care of. You are tasked with maintain
+          your pets level of Hunger,Thirst, and boredom. Each option taken (
+          except for getting pet stats and ending the program) will have
+          positive and negative affects on your pets different levels.
         </div>
+        <a class="square grey zone" href="https://www.google.com">Google</a>
+        <p class="square red">Skills used: Java</p>
       </article>
-      <article class="Article article-2">
-        <h3>Virtual Pet Shelter</h3>
-        <div class="box zone grey"><img src="./img/PetShelter.png" />Virtual pet has been upgraded to include a shelter so that you can
-          house and handle more than one pet at a time. You are tasked with
-          maintain levels of Hunger,Thirst, and boredom for all pets in the
-          shelter. There are now options to have your pets adopted (removed from
-          the shelter), add new pets, and to play with a specific pet of your
-          choice.</div>
-       
-        <a class="grey" href="https://www.google.com">Google</a>
-        <div class="square grey">
-          <p class="red">Skills used: Java</p>
+      <article class="Article">
+        <h2>Virtual Pet Shelter</h2>
+        <div class="box zone grey">
+          <img src="./img/PetShelter.png" /> Virtual pet has been upgraded to
+          include a shelter so that you can house and handle more than one pet
+          at a time. You are tasked with maintain levels of Hunger,Thirst, and
+          boredom for all pets in the shelter. There are now options to have
+          your pets adopted (removed from the shelter), add new pets, and to
+          play with a specific pet of your choice.
         </div>
+        <a class="square zone grey" href="https://www.google.com">Google</a>
+        <p class="square red">Skills used: Java</p>
       </article>
-      <article class="Article article-3">
-        <h3>Pets Amok</h3>
-        <div class="box"><img src="./img/PetsAmok.png" /></div>
-        <p class="box grey zone">
-          The next big phase of Virtual Pet Shelter. Pets Amok!! There are now
-          more specific types of pets like Organic and Robo. Cats have been
-          thrown into the mix as well. Not only do you have to pay attention to
-          Hunger,Thirst and Boredom levels for each pet, now there new
-          attributes added for each different type of pet. BE-CAREFUL, to not
-          let your levels go to low otherwise your pet will lose happiness and
-          even health. Can you keep up? Do you have what it takes to manage so
-          many different pets?
-        </p>
-        <a class="grey" href="https://www.google.com">Google</a>
-        <div class="square grey">
-          <p class="red">Skills used: Java</p>
+      <article class="Article">
+        <h2>Pets Amok</h2>
+        <div class="box zone grey">
+          <img src="./img/PetsAmok.png" /> The next big phase of Virtual Pet
+          Shelter. Pets Amok!! There are now more specific types of pets like
+          Organic and Robo. Cats have been thrown into the mix as well. Not only
+          do you have to pay attention to Hunger,Thirst and Boredom levels for
+          each pet, now there new attributes added for each different type of
+          pet. BE-CAREFUL, to not let your levels go to low otherwise your pet
+          will lose happiness and even health. Can you keep up? Do you have what
+          it takes to manage so many different pets?
         </div>
+        <a class="square zone grey" href="https://www.google.com">Google</a>
+        <p class="square red">Skills used: Java</p>
       </article>
-      <footer class="trademark" id="toes">
+      <footer class="footer" id="toes">
         Trademark and Copyright by Adrian Graham &copy; 2024
       </footer>
     </div>
