trying different colors

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </aside>
-      <section class="skill blue" id="Skill sets">
+      <section class="skill box blue" id="Skill sets">
         <h2>Skill sets</h2>
         <ul>
           <li>Java</li>
@@ -62,7 +62,7 @@
           <li>Skill</li>
         </ul>
       </section>
-      <section class="project" id="My Projects"><h2>My Projects</h2></section>
+      <section id="My Projects"><h2>My Projects</h2></section>
       <article class="Article">
         <h2>Virtual Pet</h2>
         <div class="box zone grey">
