updated skills box

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <nav class="Zone">
         <ul class="main-nav">
           <li>
-            <a href="#About me" class="button green light">About Me</a
-            ><a href="#Skill sets" class="button purple light">Skill sets</a
+            <a href="#me" class="button green light">About Me</a
+            ><a href="#Skills" class="button purple light">Skills</a
             ><a href="#My Projects" class="button red light">My Projects</a>
           </li>
         </ul>
       </nav>
       <header class="headline box"><h1>Adrian Graham</h1></header>
-      <section class="box" id="About Me">
+      <section class="box" id="me">
         <h2>About Me</h2>
         <div class="zone">
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
@@ -26,7 +26,7 @@
         <p>
           NEEEDDD TO FILL THIS OUT WITH BRIEF BOI WITH PHOTO CONTACT INFO LINKS
           TO GITHUB AND LINKEDLN, SKILLS AND ANYTHING ELSE PERTINENT
-          BLAHHHHHHHHHHHHHHHHHHHHHHH
+          BLAHHHHHHHHHHHHHHHHHHHHHHHBLAAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHHAHAHAHAHAHAH
         </p>
       </section>
       <aside class="sidebar">
@@ -47,20 +47,24 @@
           </li>
         </ul>
       </aside>
-      <section class="skill box blue" id="Skill sets">
-        <h2>Skill sets</h2>
-        <ul>
-          <li>Java</li>
-          <li>JavaScript</li>
-          <li>CSS</li>
-          <li>Spring Boot</li>
-          <li>Excel</li>
-          <li>API</li>
-          <li>Skill</li>
-          <li>Skill</li>
-          <li>Skill</li>
-          <li>Skill</li>
-        </ul>
+      <section class="skill box blue" id="Skills">
+        <h2 class="headerS">Skills</h2>
+        <div class="skill box blue">
+            <ul>
+              <li>Java</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+              <li>Spring Boot</li>
+              <li>Excel</li>
+            </ul>
+            <ul>
+              <li>API</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
+            </ul>
+      </div>
       </section>
       <section id="My Projects"><h2>My Projects</h2></section>
       <article class="Article">
