--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="zone">
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
-        <p>
-Hello, my name is Adrian Graham. I was born in Romania
+        <p class="bio">
+Hello, my name is Adrian Graham. I was born in Romania. 
         </p>
         <aside class="sidebar">
           <h2>Contacts</h2>
