--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
         <p class="bio">
-Hello, my name is Adrian Graham. I was born in Romania. 
+Learning to utilize my problem solving skills through different formats of coding. In my free time I enjoy building furniture from scratch in my garage for my home and friends, maintaining my home with different projects, video games, and collecting memorabilia. 
         </p>
         <aside class="sidebar">
           <h2>Contacts</h2>
@@ -48,23 +48,29 @@ Hello, my name is Adrian Graham. I was born in Romania.
         <h2 class="header-s">Skills</h2>
         <div class="skill box blue">
             <ul>
+              <li>OOP</li>
+              <li>TDD</li>
               <li>Java</li>
               <li>JavaScript</li>
               <li>CSS</li>
-              <li>Spring Boot</li>
+              <li>CSS Grid</li>
+              <li>CSS Flexbox</li>
             </ul>
             <ul>
+              <li>Spring Boot</li>
+              <li>MVC</li>
               <li>API</li>
-              <li>Word</li>
-              <li>React</li>
-              <li>Excel</li>
+              <li>Microsoft Word</li>
+              <li>HTML</li>
+              <li>Microsoft Excel</li>
+              <li>Google Sheet</li>
             </ul>
       </div>
       </div>
       </section>
       <section class="article" id="my-projects"><h2>My Projects</h2>
       <article class="article">
-        <h3>Virtual Pet</h3>
+        <h3 class="artitle">Virtual Pet</h3>
         <div class="box zone grey">
           <img src="./img/VirtualPet.png" /> Java based program where you have a
           digital pet that must be taken care of. You are tasked with maintain
@@ -76,7 +82,7 @@ Hello, my name is Adrian Graham. I was born in Romania.
         <p class="square red">Skills used: Java</p>
       </article>
       <article class="article">
-        <h3>Virtual Pet Shelter</h3>
+        <h3 class="artitle">Virtual Pet Shelter</h3>
         <div class="box zone grey">
           <img src="./img/PetShelter.png" /> Virtual pet has been upgraded to
           include a shelter so that you can house and handle more than one pet
@@ -85,11 +91,11 @@ Hello, my name is Adrian Graham. I was born in Romania.
           your pets adopted (removed from the shelter), add new pets, and to
           play with a specific pet of your choice.
         </div>
-        <a class="square zone grey" href="https://www.google.com">Google</a>
+        <a class="zone grey" href="https://www.google.com">Google</a>
         <p class="square red">Skills used: Java</p>
       </article>
       <article class="article">
-        <h3>Pets Amok</h3>
+        <h3 class="artitle">Pets Amok</h3>
         <div class="box zone grey">
           <img src="./img/PetsAmok.png" /> The next big phase of Virtual Pet
           Shelter. Pets Amok!! There are now more specific types of pets like
