--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
         <p class="bio">
-          Learning to utilize my problem solving skills through different
-          formats of coding and their associated programs. I look forward to
-          being a future Program developer using skills learned from
-          WeCanCodeIt. In my free time I enjoy building furniture from scratch
-          in my garage for my home and friends, maintaining my home with
-          different projects, video games, and collecting memorabilia.
+          Hello, I have over a decades worth of background in logistics and
+          customer service. I am working towards changing my career path with
+          the skills I learned from WeCanCodeIt towards being a Software
+          developer. Learning to utilize my strong attention to details and my
+          problem solving skills through different formats of coding and their
+          associated programs. In my free time I enjoy building furniture from
+          scratch in my garage for my home and for my friends, maintaining and
+          updating my home with different projects, video games, and collecting
+          memorabilia.
         </p>
         <aside class="sidebar">
           <h2>Contacts</h2>
