--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             taken ( except for getting pet stats and ending the program) will
             have positive and negative affects on your pets different levels.
           </div>
-          <a class="square grey zone" href="https://www.google.com">Google</a>
+          <a class="grey zone" href="https://www.google.com">Google</a>
           <p class="square red">Skills used: Java</p>
         </article>
         <article class="article">
@@ -117,13 +117,13 @@
             otherwise your pet will lose happiness and even health. Can you keep
             up? Do you have what it takes to manage so many different pets?
           </div>
-          <a class="square zone grey" href="https://www.google.com">Google</a>
+          <a class="zone grey" href="https://www.google.com">Google</a>
           <p class="square red">Skills used: Java</p>
         </article>
-        <footer class="footer" id="toes">
-          Trademark and Copyright by Adrian Graham &copy; 2024
-        </footer>
       </section>
     </div>
+    <footer class="footer" id="toes">
+      Trademark and Copyright by Adrian Graham &copy; 2024
+    </footer>
   </body>
 </html>
