--- a/index.html
+++ b/index.html
@@ -14,12 +14,29 @@
             <a href="#me" class="button green light">About Me</a
             ><a href="#skills" class="button purple light">Skills</a
             ><a href="#my-projects" class="button red light">My Projects</a>
+            <button class="button yellow light facts">
+              Click for random fun facts
+            </button>
           </li>
         </ul>
       </nav>
       <header class="headline box"><h1>Adrian Graham</h1></header>
       <section class="box" id="me">
         <h2>About Me</h2>
+        <div class="slideshow">
+          <a href="#" class="slideshow-link">
+            <img src="img/Cabinets.jpg" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="img/desk.jpg" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="img/Book.jpg" />
+          </a>
+          <a href="#" class="slideshow-link">
+            <img src="img/Me.jpg" />
+          </a>
+        </div>
         <div class="zone">
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
         </div>
@@ -125,5 +142,6 @@
     <footer class="footer" id="toes">
       Trademark and Copyright by Adrian Graham &copy; 2024
     </footer>
+    <script src="Facts.js"></script>
   </body>
 </html>
