--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Adrian Graham Portfolio</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-slideshow">
       <nav class="zone">
         <ul class="main-nav">
           <li>
@@ -23,19 +23,19 @@
       <header class="headline box"><h1>Adrian Graham</h1></header>
       <section class="box" id="me">
         <h2>About Me</h2>
-        <div class="slideshow">
-          <a href="#" class="slideshow-link">
-            <img src="img/Cabinets.jpg" />
-          </a>
-          <a href="#" class="slideshow-link">
-            <img src="img/desk.jpg" />
-          </a>
-          <a href="#" class="slideshow-link">
-            <img src="img/Book.jpg" />
-          </a>
-          <a href="#" class="slideshow-link">
+        <div class="slides">
+          <!-- <a href="" class="slideshow">
             <img src="img/Me.jpg" />
           </a>
+          <a href="" class="slideshow">
+            <img src="img/Cabinets.jpg" />
+          </a>
+          <a href="" class="slideshow">
+            <img src="img/desk.jpg" />
+          </a>
+          <a href="" class="slideshow">
+            <img src="img/Book.jpg" />
+          </a> -->
         </div>
         <div class="zone">
           <img class="me" src="./img/Me.jpg" width="200" height="250" />
