--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
       <nav class="zone">
         <ul class="main-nav">
           <li>
-            <a href="#me" class="button green light">About Me</a
-            ><a href="#skills" class="button purple light">Skills</a
-            ><a href="#my-projects" class="button red light">My Projects</a>
-            <button class="button yellow light facts">
-              Click for random fun facts
-            </button>
+            <a href="#me" class="button green">About Me</a
+            ><a href="#skills" class="button purple">Skills</a
+            ><a href="#my-projects" class="button red">My Projects</a>
+            <div id="fun-facts" class="blue facts">Random fun facts</div>
           </li>
         </ul>
       </nav>
@@ -63,7 +61,7 @@
             </li>
             <li>
               <a
-                href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+                href="https://www.linkedin.com/in/adrian-graham-b9750419/"
                 >Linkedln</a
               >
             </li>
