--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         <h2>About Me</h2>
         <div id="carousel">
           <figure id="spinner">
-            <img src="img/Me.jpg" alt />
+            <figure>
+              <img src="img/Me.jpg" alt />
+            </figure>
             <img src="img/Book.jpg" alt />
             <img src="img/Cabinets.jpg" alt />
             <img src="img/desk.jpg" alt />
+            <img src="img/DonutClicker.png" width="600px" height="500px" alt />
+            <img src="img/BookReadCalculator.png" width="800px" alt />
           </figure>
         </div>
         <span style="float: left" class="ss-icon" onclick="galleryspin('-')"
