--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
       <div class="zone"></div>
       <p class="bio">
         Hello, I have over a decades worth of background in logistics and
-        customer service. I am working towards changing my career path with the
-        skills I learned from WeCanCodeIt towards being a Software developer.
-        Learning to utilize my strong attention to details and my problem
-        solving skills through different formats of coding and their associated
-        programs. In my free time I enjoy building furniture from scratch in my
-        garage for my home and for my friends, maintaining and updating my home
-        with different projects, video games, and collecting memorabilia.
+        customer service. I am changing my career path, with the skills I
+        learned from WeCanCodeIt, to step into the software development field. I
+        enjoy utilizing my strong attention to detail and problem solving skills
+        through different forms of coding and their associated programs. In my
+        free time, I enjoy building furniture from scratch, solving home
+        maintenance problems, video games, and collecting memorabilia.
       </p>
       <aside class="sidebar">
         <h2>Contacts</h2>
