created multiple web pages

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </ul>
       </button>
       <div class="nav" id="menu-lightbox">
-        <ul >
-          <a href="#me" class="button green">About Me</a
-          ><a href="#skills" class="button purple">Skills</a
-          ><a href="#my-projects" class="button red">My Projects</a>
+        <ul>
+          <a href="./about.html" class="button green">About Me</a
+          ><a href="./skills.html" class="button purple">Skills</a
+          ><a href="./myProjects.html" class="button red">My Projects</a>
           <button class="button yellow light facts">
             Click for random fun facts
           </button>
@@ -62,103 +62,24 @@
           >&gt;</span
         >
       </div>
-      <div class="zone"></div>
-      <h2 id="me">About Me</h2>
-      <p class="bio">
-        Hello, I have over a decades worth of background in logistics and
-        customer service. I am changing my career path, with the skills I
-        learned from WeCanCodeIt, to step into the software development field. I
-        enjoy utilizing my strong attention to detail and problem solving skills
-        through different forms of coding and their associated programs. In my
-        free time, I enjoy building furniture from scratch, solving home
-        maintenance problems, video games, and collecting memorabilia.
-      </p>
-      <aside class="sidebar">
-        <h2>Contacts</h2>
-        <ul>
-          <li><a href="mailto:gaps512@gmail.com">Email</a></li>
-          <li>
-            <a
-              href="https://github.com/ProgramWithGraham/ProgramWithGraham.github.io"
-              >Github</a
-            >
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/adrian-graham-b9750419/"
-              >Linkedln</a
-            >
-          </li>
-        </ul>
-      </aside>
-      <div class="box blue" id="skills">
-        <h2 class="header-s">Skills</h2>
-        <div class="skill box blue">
-          <ul>
-            <li>OOP</li>
-            <li>TDD</li>
-            <li>Java</li>
-            <li>JavaScript</li>
-            <li>CSS</li>
-            <li>CSS Grid</li>
-            <li>CSS Flexbox</li>
-            <li>VS Code</li>
-          </ul>
-          <ul>
-            <li>Spring Boot</li>
-            <li>MVC</li>
-            <li>API</li>
-            <li>Microsoft Word</li>
-            <li>HTML</li>
-            <li>Microsoft Excel</li>
-            <li>Google Sheet</li>
-            <li>Github</li>
-          </ul>
-        </div>
-      </div>
     </section>
-    <section class="article" id="my-projects">
-      <h2>My Projects</h2>
-      <article class="article">
-        <h3 class="project">Virtual Pet</h3>
-        <div class="box zone grey">
-          <img src="./img/VirtualPet.png" /> Java based program where you have a
-          digital pet that must be taken care of. You are tasked with maintain
-          your pets level of Hunger,Thirst, and boredom. Each option taken (
-          except for getting pet stats and ending the program) will have
-          positive and negative affects on your pets different levels.
-        </div>
-        <a class="grey zone" href="https://www.google.com">Google</a>
-        <p class="square red">Skills used: Java</p>
-      </article>
-      <article class="article">
-        <h3 class="project">Virtual Pet Shelter</h3>
-        <div class="box zone grey">
-          <img src="./img/PetShelter.png" /> Virtual pet has been upgraded to
-          include a shelter so that you can house and handle more than one pet
-          at a time. You are tasked with maintain levels of Hunger,Thirst, and
-          boredom for all pets in the shelter. There are now options to have
-          your pets adopted (removed from the shelter), add new pets, and to
-          play with a specific pet of your choice.
-        </div>
-        <a class="zone grey" href="https://www.google.com">Google</a>
-        <p class="square red">Skills used: Java</p>
-      </article>
-      <article class="article">
-        <h3 class="project">Pets Amok</h3>
-        <div class="box zone grey">
-          <img src="./img/PetsAmok.png" /> The next big phase of Virtual Pet
-          Shelter. Pets Amok!! There are now more specific types of pets like
-          Organic and Robo. Cats have been thrown into the mix as well. Not only
-          do you have to pay attention to Hunger,Thirst and Boredom levels for
-          each pet, now there new attributes added for each different type of
-          pet. BE-CAREFUL, to not let your levels go to low otherwise your pet
-          will lose happiness and even health. Can you keep up? Do you have what
-          it takes to manage so many different pets?
-        </div>
-        <a class="zone grey" href="https://www.google.com">Google</a>
-        <p class="square red">Skills used: Java</p>
-      </article>
-    </section>
+    <aside>
+      <h2 class="sidebar">Contacts</h2>
+      <ul class="sidebar">
+        <li><a href="mailto:gaps512@gmail.com">Email</a></li>
+        <li>
+          <a
+            href="https://github.com/ProgramWithGraham/ProgramWithGraham.github.io"
+            >Github</a
+          >
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/adrian-graham-b9750419/"
+            >Linkedln</a
+          >
+        </li>
+      </ul>
+    </aside>
     <footer class="footer" id="toes">
       Created by Adrian Graham &copy; 2024
     </footer>
