--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Adrian Graham Portfolio</title>
-  </head>
-  <body>
+  <header>
+    <button id="menu-box" class="menu" onclick="toggleMenu();">
+      <ul class="menu">
+        ≡
+      </ul>
+    </button>
     <nav class="zone">
-      <button id="menu-box" class="menu" onclick="toggleMenu();">
-        <ul class="menu">
-          ≡
-        </ul>
-      </button>
       <div class="nav" id="menu-lightbox">
         <ul>
           <a href="./about.html" class="button green">About Me</a
@@ -24,6 +18,14 @@
         </ul>
       </div>
     </nav>
+  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Adrian Graham Portfolio</title>
+  </head>
+  <body>
     <header class="name box"><h1>Adrian Graham</h1></header>
     <section class="box">
       <div class="slideshow-container">
