fixed menu button

--- a/about.html
+++ b/about.html
@@ -7,6 +7,23 @@
     <title>About me</title>
   </head>
   <body>
+    <button id="menu-box" class="menu" onclick="toggleMenu();">
+      <ul class="menu">
+        ≡
+      </ul>
+    </button>
+    <nav class="zone">
+      <div class="nav" id="menu-lightbox">
+        <ul>
+          <a href="./about.html" class="button green">About Me</a
+          ><a href="./skills.html" class="button purple">Skills</a
+          ><a href="./myProjects.html" class="button red">My Projects</a>
+          <button class="button yellow light facts">
+            Click for random fun facts
+          </button>
+        </ul>
+      </div>
+    </nav>
     <div class="zone"></div>
     <h2 id="me">About Me</h2>
     <p class="bio">
