--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </ul>
     </button>
     <nav class="zone">
-      <div class="nav" id="menu-lightbox">
+      <div class="nav" id="menu-lightbox" style="display: none">
         <ul>
           <a href="./about.html" class="button green">About Me</a
           ><a href="./skills.html" class="button purple">Skills</a
